logics fixes